[gd_scene load_steps=27 format=3 uid="uid://d1oxwr0oqwup1"]

[ext_resource type="Script" path="res://scenes/player/player_platformer.gd" id="1_w83gu"]
[ext_resource type="Shader" path="res://scenes/enemies/white.gdshader" id="2_5kj7c"]
[ext_resource type="Texture2D" uid="uid://dbkrwd4xmxcgi" path="res://art/player/new_chicken3.png" id="3_1kjrj"]
[ext_resource type="Script" path="res://scenes/player/player_sfx.gd" id="3_7ddyx"]
[ext_resource type="Texture2D" uid="uid://cndyo13k0wnxd" path="res://art/effects/impact.png" id="5_w4n7e"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ikdg5"]
resource_local_to_scene = true
shader = ExtResource("2_5kj7c")
shader_parameter/flash_color = Color(0, 0, 0, 1)
shader_parameter/flash_value = 0.5

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_f02j8"]
radius = 7.0
height = 18.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_uid3g"]
size = Vector2(14, 4)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_x4vlo"]
radius = 9.0
height = 22.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_ajpbi"]
radius = 8.0
height = 20.0

[sub_resource type="Animation" id="Animation_6wr3w"]
resource_name = "Double_jump"
length = 0.5
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SpriteScale/Skin:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [9, 10, 9, 10, 11]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("SpriteScale/Skin:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.3, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 2),
"update": 0,
"values": [0.0, -0.174533, 0.174533, 0.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("SpriteScale/Skin:offset")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, -5)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("SpriteScale/Skin:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("SpriteScale/Skin:material:shader_parameter/flash_value")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 0.5]
}

[sub_resource type="Animation" id="Animation_qs22r"]
resource_name = "Double_jump_backwards"
length = 0.5
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SpriteScale/Skin:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [9, 10, 9, 10, 11]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("SpriteScale/Skin:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.3, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 2),
"update": 0,
"values": [0.0, 0.174533, -0.174533, 0.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("SpriteScale/Skin:offset")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, -5)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("SpriteScale/Skin:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("SpriteScale/Skin:material:shader_parameter/flash_value")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.2, 0.0]
}

[sub_resource type="Animation" id="Animation_03scs"]
resource_name = "Explode"
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SpriteScale/Skin:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.8),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [25, 26]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("SpriteScale/Skin:material:shader_parameter/flash_color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.55, 0.8),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(0, 0, 0, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("SpriteScale/Skin:material:shader_parameter/flash_value")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.35, 0.8),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0.5, 0.0, 1.0]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("SpriteScale/Skin:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.8, 0.85, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1.3, 1.3), Vector2(2, 2), Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_pcg1u"]
resource_name = "Falling"
length = 0.2
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SpriteScale/Skin:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.2),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [13]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("SpriteScale/Skin:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 2),
"update": 0,
"values": [Vector2(1, 1), Vector2(0.7, 1.3)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("SpriteScale/Skin:material:shader_parameter/flash_value")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("SpriteScale/Skin:rotation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_gwcdw"]
resource_name = "Hurt"
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SpriteScale/Skin:offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, -10)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("SpriteScale/Skin:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("SpriteScale/Skin:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [9, 10, 11]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("SpriteScale/Skin:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(1.2, 1.2), Vector2(1, 1), Vector2(1.1, 1.1), Vector2(1, 1)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("SpriteScale/Skin:material:shader_parameter/flash_value")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("SpriteScale/Skin:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 0.3, 0.5, 0.6, 0.65, 0.7, 0.75),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [true, false, true, false, true, false, true]
}

[sub_resource type="Animation" id="Animation_bvb18"]
resource_name = "Idle"
length = 0.55
loop_mode = 1
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SpriteScale/Skin:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.15, 0.3, 0.45),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("SpriteScale/Skin:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.25),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1.1, 0.9)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("SpriteScale/Skin:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("SpriteScale/Skin:offset")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, -10)]
}

[sub_resource type="Animation" id="Animation_276on"]
resource_name = "Jump_end"
length = 0.5
step = 0.01
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SpriteScale/Skin:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.3),
"transitions": PackedFloat32Array(1, 1, 2),
"update": 0,
"values": [Vector2(0.7, 1.3), Vector2(1.5, 0.5), Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("SpriteScale/Skin:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.06, 0.21, 0.25, 0.35),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("SpriteScale/Skin:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("SpriteScale/Skin:offset")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, -10)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("SpriteScale/Skin:material:shader_parameter/flash_value")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Landing:emitting")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0.01),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_4vvs2"]
resource_name = "Jump_start"
length = 0.55
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SpriteScale/Skin:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05, 0.2, 0.35, 0.55),
"transitions": PackedFloat32Array(1, 1, 0.5, 0.5, 2),
"update": 0,
"values": [Vector2(1, 1), Vector2(1.2, 0.8), Vector2(0.5, 1.5), Vector2(1.2, 0.8), Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("SpriteScale/Skin:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [14, 12]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("SpriteScale/Skin:offset")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.05),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, -10), Vector2(0, -5)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("SpriteScale/Skin:material:shader_parameter/flash_value")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_7e543"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SpriteScale/Skin:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("SpriteScale/Skin:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("SpriteScale/Skin:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("SpriteScale/Skin:offset")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, -10)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("SpriteScale/Skin:material:shader_parameter/flash_value")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.5]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("SpriteScale/Skin:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("Landing:emitting")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("SpriteScale/Skin:material:shader_parameter/flash_color")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 0, 0, 1)]
}

[sub_resource type="Animation" id="Animation_vrfdg"]
resource_name = "Walking"
length = 0.42
loop_mode = 1
step = 0.01
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SpriteScale/Skin:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.06, 0.12, 0.18, 0.24, 0.3, 0.36),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [14, 15, 16, 17, 18, 19, 20]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("SpriteScale/Skin:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.11, 0.22, 0.33),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1.1, 0.9), Vector2(1, 1), Vector2(1.1, 0.9)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("SpriteScale/Skin:offset")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, -10)]
}

[sub_resource type="Animation" id="Animation_sxyh1"]
resource_name = "Wall"
length = 0.5
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SpriteScale/Skin:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [4]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("SpriteScale/Skin:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(0.9, 1.1), Vector2(1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("SpriteScale/Skin:offset")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, -10)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("SpriteScale/Skin:material:shader_parameter/flash_value")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("SpriteScale/Skin:rotation")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_q4730"]
_data = {
"Double_jump": SubResource("Animation_6wr3w"),
"Double_jump_backwards": SubResource("Animation_qs22r"),
"Explode": SubResource("Animation_03scs"),
"Falling": SubResource("Animation_pcg1u"),
"Hurt": SubResource("Animation_gwcdw"),
"Idle": SubResource("Animation_bvb18"),
"Jump_end": SubResource("Animation_276on"),
"Jump_start": SubResource("Animation_4vvs2"),
"RESET": SubResource("Animation_7e543"),
"Walking": SubResource("Animation_vrfdg"),
"Wall": SubResource("Animation_sxyh1")
}

[sub_resource type="Curve" id="Curve_6qwu5"]
min_value = 2.0
max_value = 6.0
_data = [Vector2(0, 2), 0.0, 8.10594, 0, 0, Vector2(0.749164, 6), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="Gradient" id="Gradient_uyh4s"]
offsets = PackedFloat32Array(0, 0.900369)
colors = PackedColorArray(1, 1, 1, 1, 1, 1, 1, 0)

[sub_resource type="Curve" id="Curve_eqafr"]
max_value = 2.0
_data = [Vector2(0.00334448, 0.361373), 0.0, 4.29922, 0, 0, Vector2(0.505017, 0.950202), -0.145319, -0.145319, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 3

[sub_resource type="Gradient" id="Gradient_rs7by"]
colors = PackedColorArray(1, 1, 1, 1, 1, 1, 1, 0)

[node name="Player1" type="CharacterBody2D" groups=["Player"]]
collision_layer = 24
collision_mask = 125
floor_stop_on_slope = false
floor_max_angle = 1.48353
floor_snap_length = 5.0
platform_floor_layers = 4294967287
safe_margin = 0.01
script = ExtResource("1_w83gu")

[node name="SpriteScale" type="Node2D" parent="."]
position = Vector2(0, -8)

[node name="Skin" type="Sprite2D" parent="SpriteScale"]
material = SubResource("ShaderMaterial_ikdg5")
position = Vector2(0, 8)
texture = ExtResource("3_1kjrj")
offset = Vector2(0, -10)
hframes = 7
vframes = 4

[node name="WorldCol" type="CollisionShape2D" parent="."]
position = Vector2(-3.52264e-06, -8)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_f02j8")

[node name="AttackArea" type="Area2D" parent="WorldCol"]
position = Vector2(8, -2.89599e-05)
rotation = -1.5708
collision_layer = 0
priority = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="WorldCol/AttackArea"]
position = Vector2(0, -1)
shape = SubResource("RectangleShape2D_uid3g")
debug_color = Color(0.7, 0, 0.0484317, 0.42)

[node name="InteractRange" type="Area2D" parent="WorldCol"]
position = Vector2(8, -2.89599e-05)
rotation = -1.5708
collision_layer = 0
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="WorldCol/InteractRange"]
position = Vector2(0, -8)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_x4vlo")
debug_color = Color(1, 0.7365, 0.49, 0.133333)

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="WorldCol/InteractRange"]
visible = false
position = Vector2(3.8147e-06, -8)
scale = Vector2(1.1, 1.1)
polygon = PackedVector2Array(1.81818, 9.09091, -10, 9, -10, -9, 10, -9, 10, 9, 2.72727, 9, -2.6549e-07, 7, 8, 7, 8, -7, -8, -7, -8, 7, -1, 7)
disabled = true

[node name="RigidBody2D" type="RigidBody2D" parent="WorldCol"]
collision_layer = 8
collision_mask = 8
gravity_scale = 0.0
contact_monitor = true
max_contacts_reported = 5

[node name="CollisionShape2D" type="CollisionShape2D" parent="WorldCol/RigidBody2D"]
visible = false
shape = SubResource("CapsuleShape2D_ajpbi")
disabled = true
debug_color = Color(0.443304, 0, 0.7, 0.42)

[node name="StatePlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_q4730")
}

[node name="Camera2D" type="Camera2D" parent="."]
visible = false
offset = Vector2(0, -40)
enabled = false
zoom = Vector2(1.2, 1.2)
position_smoothing_enabled = true
position_smoothing_speed = 4.0

[node name="Coyote" type="Timer" parent="."]
one_shot = true

[node name="FlapInterval" type="Timer" parent="."]
one_shot = true

[node name="FlapBuffer" type="Timer" parent="."]
one_shot = true

[node name="JumpBuffer" type="Timer" parent="."]
one_shot = true

[node name="InputPass" type="Timer" parent="."]
one_shot = true

[node name="SkidParticles" type="CPUParticles2D" parent="."]
emitting = false
amount = 16
lifetime = 2.0
speed_scale = 4.0
emission_shape = 3
emission_rect_extents = Vector2(5, 1)
gravity = Vector2(0, -10)
angular_velocity_min = 30.0
angular_velocity_max = 70.0
scale_amount_curve = SubResource("Curve_6qwu5")
color_ramp = SubResource("Gradient_uyh4s")

[node name="WallSkid" type="CPUParticles2D" parent="."]
position = Vector2(9, -5)
emitting = false
amount = 16
lifetime = 2.0
speed_scale = 4.0
emission_shape = 3
emission_rect_extents = Vector2(1, 5)
gravity = Vector2(0, -10)
angular_velocity_min = 30.0
angular_velocity_max = 70.0
scale_amount_curve = SubResource("Curve_6qwu5")
color_ramp = SubResource("Gradient_uyh4s")

[node name="SFX" type="AudioStreamPlayer2D" parent="."]
script = ExtResource("3_7ddyx")

[node name="Pow" type="CPUParticles2D" parent="."]
emitting = false
amount = 1
lifetime = 0.1
one_shot = true
texture = ExtResource("5_w4n7e")
direction = Vector2(0, 0)
gravity = Vector2(0, 0)
scale_amount_curve = SubResource("Curve_eqafr")
color = Color(1, 1, 1, 0.705882)

[node name="Landing" type="CPUParticles2D" parent="."]
emitting = false
amount = 7
lifetime = 0.2
one_shot = true
explosiveness = 1.0
direction = Vector2(0, -1)
initial_velocity_min = 190.0
initial_velocity_max = 190.0
color_ramp = SubResource("Gradient_rs7by")
